--- a/java/pom.xml
+++ b/java/pom.xml
@@ -82,6 +82,12 @@
             <version>5.2.6.RELEASE</version>
         </dependency>
     </dependencies>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.13.0</version>
+    </dependency>
+
 
     <build>
         <plugins>
