--- a/afltables_scraper/scrapy.cfg
+++ b/afltables_scraper/scrapy.cfg
@@ -2,5 +2,5 @@
 default = afltables_scraper.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = http://localhost:6800/
 project = afltables_scraper
