Fix JSON parsing, adding parsed data to database

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -93,6 +93,11 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
 
     </dependencies>
 
