Refactor Match classes as Games, add new Game methods

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # datasource connection properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_capstone
 spring.datasource.name=final_capstone
-spring.datasource.username=match_appuser
+spring.datasource.username=footy_appuser
 spring.datasource.password=match-piper
 
 jwt.header=Authorization
