--- a/java/pom.xml
+++ b/java/pom.xml
@@ -116,6 +116,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId> com.heroku.sdk </groupId>
+                <artifactId> heroku-maven-plugin </artifactId>
+                <version> 3.0.4 </version>
+                <configuration>
+                    <appName> later-ladder </appName>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -Dserver.port=$PORT -cp target/classes:target/dependency/*
+                            com.heatherpiper.Application </web>
+                    </processTypes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
