--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource connection properties
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 jwt.header=Authorization
