--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -15,3 +15,5 @@ jwt.route.authentication.refresh=/refresh
 server.error.include-stacktrace=never
 
 server.port=9000
+
+logging.level.reactor.netty.http.client=DEBUG
