Add aspect-oriented dependencies needed for `@Retryable`

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "SpellCheckingInspection" for whole file
 # datasource connection properties
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
