--- a/java/pom.xml
+++ b/java/pom.xml
@@ -118,10 +118,17 @@
             <artifactId>spring-retry</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
     </dependencies>
-
-
 
 
     <build>
@@ -129,18 +136,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId> com.heroku.sdk </groupId>
-                <artifactId> heroku-maven-plugin </artifactId>
-                <version> 3.0.4 </version>
-                <configuration>
-                    <appName> later-ladder </appName>
-                    <processTypes>
-                        <web>java $JAVA_OPTS -Dserver.port=$PORT -cp target/classes:target/dependency/*
-                            com.heatherpiper.Application </web>
-                    </processTypes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
