--- a/vue/public/manifest.json
+++ b/vue/public/manifest.json
@@ -32,7 +32,13 @@
             "type": "image/png"
         },
         {
-            "src": "icon-256.png",
+            "src": "/icon-196-maskable.png",
+            "sizes": "196x196",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icon-256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
