Add dependencies needed for Google Sign-In and update application.properties with Google client Id, secret, and scope

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -16,3 +16,7 @@ jwt.route.authentication.refresh=/refresh
 server.error.include-stacktrace=never
 
 server.port=9000
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
