--- a/java/pom.xml
+++ b/java/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
         <!-- Security dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -130,6 +134,11 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.4.0</version>
         </dependency>
     </dependencies>
 
